--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,27 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+     <!-- <style>
+        body {
+            width: 900px; /* Force a desktop-like width */
+             height: 600%;
+            margin: 0 auto; /* Center the content */
+            overflow-x: hidden; /* Prevent horizontal scrolling */
+        }
+    </style> -->
+    <!-- <style>
+        html, body {
+            width: 1024px; /* Force a desktop-like width */
+            min-height: 100vh; /* Ensure body covers the full height of the viewport */
+            margin: 0 auto; /* Center the content */
+            overflow-x: hidden; /* Prevent horizontal scrolling */
+            overflow-y: auto; /* Allow vertical scrolling if content overflows */
+        }
+
+        #root {
+            min-height: 100vh; /* Ensure the root div covers the full height of the viewport */
+        }
+    </style> -->
 </head>
 <body>
     <noscript>
